# poetrystarter

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/poetrystarter/: __init__.py  files.py  types.py
tests/: test_files.py
